# Lesson4

./: README.md  REPORT.md  pyproject.toml
src/homework/: cnn_vs_fc_comparison.ipynb
src/homework/utils/: __init__.py  cnn_with_residual.py  datasets.py  fully_connected_model.py  trainer.py
